# financial_data_collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: ADJUSTED_PRICE_BACKLOG.md  ADJUSTED_PRICE_IMPLEMENTATION_PLAN.md  API_COLLECTION_PLAN.md  ARCHITECTURE.md  BACKTEST_DATA_INTERFACE.md  BULK_EXPORT_API_SPEC.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_GUIDE.md  KRX_API_COLLECTION_SPEC.md  KRX_INTEGRATION_TEST_GUIDE.md  PHASE1_INTERFACE_DESIGN.md  QUICKSTART.md  README.md  SCHEMA.md  SCOPE_REVIEW.md  TDD_TODO_CHECKLIST.md  TODO_CHECKLIST.md
skills/windows-patch-fallback/: SKILL.md
skills/windows-patch-fallback/agents/: openai.yaml
skills/windows-patch-fallback/references/: windows_utf8_editing.md
sql/: platform_postgres_migrations.sql  platform_schema.sql  schema_annotated.sql
src/financial_data_collector/: __init__.py  adjustment_quality_gate.py  adjustment_service.py  api.py  calendar_builder.py  collect_dart_corporate_events.py  collect_dart_events.py  collect_kind_delistings.py  collect_krx_data.py  collectors.py  dart_client.py  dart_event_parser.py  dashboard.css  dashboard.html  dashboard.js  dashboard_routes.py  export_backtest_dataset.py  export_service.py  kind_client.py  krx_client.py  models.py  parquet_writer.py  pipeline.py  preflight.py  rebuild_adjustment_factors.py  repair_corporate_event_timings.py  repository.py  review_corporate_events.py  runs.py  sample_backtest_run.py  server.py  settings.py  validation.py
src/financial_data_collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_adjusted_export.py  test_adjustment_service.py  test_api_e2e_and_export.py  test_collect_dart_corporate_events.py  test_collect_krx_data.py  test_collectors_and_validation.py  test_dart_client.py  test_dart_event_parser.py  test_dart_integration.py  test_dashboard_routes.py  test_export_performance.py  test_kind_delisting.py  test_krx_client.py  test_krx_integration.py  test_pipeline_e2e.py  test_preflight.py  test_repository_resilience.py  test_runs_and_export_api.py  test_sample_backtest_run.py  test_schema_contract.py  test_schema_contract_postgres.py  test_server_api_status_codes.py  test_settings.py  test_signal_market_filters.py
