[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-collector"
version = "0.1.0"
description = "Phase 1 data collector and bulk export service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pykrx-openapi>=0.1.0",
]

[project.optional-dependencies]
parquet = [
  "pyarrow>=14.0.0",
]
dev = [
  "pytest>=7.0",
  "freezegun>=1.5.1",
  "psycopg[binary]>=3.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
markers = [
  "integration: real external integration tests",
  "postgres: tests that require TEST_POSTGRES_DSN and a reachable PostgreSQL instance",
  "performance: optional performance tests (RUN_PERF_TESTS=1)"
]
