[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-collector"
version = "0.2.0"
description = "Minimal KRX swing backtest data collector"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.8",
  "psycopg[binary]>=3.1",
  "pykrx-openapi>=0.1.0",
  "requests>=2.32.5",
  "pyarrow>=21.0.0",
  "uvicorn[standard]>=0.39.0",
]

[project.scripts]
collect-krx-data = "financial_data_collector.collect_krx_data:main"
collect-kind-delistings = "financial_data_collector.collect_kind_delistings:main"
rebuild-adjustment-factors = "financial_data_collector.rebuild_adjustment_factors:main"
export-backtest-dataset = "financial_data_collector.export_backtest_dataset:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "freezegun>=1.5.1",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
markers = [
  "integration: real external integration tests",
  "postgres: tests that require TEST_POSTGRES_DSN and a reachable PostgreSQL instance",
  "performance: optional performance tests (RUN_PERF_TESTS=1)"
]